# GriefBot

./: .gitignore  Dockerfile  LICENSE  README.md  check_env.py  client.py  debug_action_received.json  debug_introspection.py  debug_sweep.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py  test_grade_isolated.py  tmp_create_app.txt  tmp_create_fastapi_app.txt  tmp_http_server.txt
server/: __init__.py  app.py  griefbot_environment.py
