[project]
name = "openenv-griefbot_retirement"
version = "0.1.0"
description = "GriefBot Retirement Service — An OpenEnv environment for gracefully retiring AI companion chatbots"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
server = "griefbot_retirement.server.app:main"

[tool.setuptools.packages]
packages = ["griefbot_retirement", "griefbot_retirement.server"]

[tool.setuptools.packages.find]

[tool.setuptools.package-dir]
griefbot_retirement = "."
"griefbot_retirement.server" = "server"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
